--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@
     border: black solid 3px;
     background-image: url(./news.jpg);
     background-size: 100% 100%;
-
+    overflow-y: scroll;
   }
   
   #biodata {
@@ -96,14 +96,14 @@
     /* height: 850px; */
     background-color: yellow;
     border: black solid 3px;
-
+    overflow-y: scroll;
   }
   #pengalaman {
     padding-top: 55px ;
     /* height: 670px; */
     border: black solid 3px;
     background-color: rgb(67, 222, 250);
-  
+    overflow-y: scroll;
   }
 
   .huruf-pertama::first-letter{
