--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     border: solid yellow 3px;
   }
   .border-hitam{
-    border: solid black 3px;
+    border: solid ghostwhite 3px;
   }
 
   .border-merah{
@@ -30,13 +30,15 @@
     padding-right: 70px;
   }
   .gambar-sekilas{
-    background-image: url(./film.png) ;
-    background-position: center;
-    /* height: 250px;
-    width: 600px; */
-    padding-right: 100px;
-    /* grid-template-columns: 30px 200px auto 100px; */
+    /* display: grid; */
+    /* background-image: url(./film.png) ; */
+    /* background-position: center; */
+    /* padding-right: 100px; */
+    text-align: center;
+    align-items: center;
+    /* grid-template-columns: auto auto auto auto; */
     background-size: 380px 300px;
+    
 
   }
   .gambar1{
@@ -106,7 +108,7 @@
     /* height: 850px; */
     border: black solid 3px;
     background-image: url(./news.jpg);
-    background-size: 100% 100%;
+    background-size: 100%;
     overflow-y: auto;
   }
   
@@ -114,6 +116,8 @@
     padding-top: 55px;
     /* height: 850px; */
     background-color: yellow;
+    background-image: url(./paint3.jpg);
+    background-size: 100% 100%;
     border: black solid 3px;
     overflow-y: auto;
   }
@@ -121,6 +125,8 @@
     padding-top: 55px ;
     /* height: 670px; */
     border: black solid 3px;
-    background-color: rgb(67, 222, 250);
+    /* background-color: rgb(67, 222, 250); */
+    background-image: url(./paint1.jpg);
+    background-size: 100%;
     overflow-y: scroll;
   }
