--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
   .gambar1{
     background-image: url(./image-001.jpg);
     /* background-color: hotpink; */
-    background-size: 100% 100% ;
+    background-size: 100% ;
   }
 
   .gambar2{
@@ -61,7 +61,7 @@
   .gambar4{
     background-image: url(./image-004.jpg);
     /* background-color: hotpink; */
-    background-size: 100% 100% ;
+    background-size: 100% ;
   }
 
   .gambar1:hover{
@@ -97,7 +97,7 @@
     color: white;
     /* height: 770px; */
 
-    border: black solid 3px;
+    border: yellow solid 3px;
     background-image: url('https://forums.unrealengine.com/filedata/fetch?id=1155855') ;
     background-size: 100% 100%;
   }
@@ -106,10 +106,10 @@
     
     padding-top: 55px;
     /* height: 850px; */
-    border: black solid 3px;
+    border: yellow solid 3px;
     background-image: url(./news.jpg);
     background-size: 100%;
-    overflow-y: auto;
+    overflow: auto;
   }
   
   #biodata {
@@ -117,7 +117,7 @@
     /* height: 850px; */
     background-color: yellow;
     background-image: url(./paint3.jpg);
-    background-size: 100% 100%;
+    /* background-size: 100% 100%; */
     border: black solid 3px;
     overflow-y: auto;
   }
@@ -127,6 +127,10 @@
     border: black solid 3px;
     /* background-color: rgb(67, 222, 250); */
     background-image: url(./paint1.jpg);
-    background-size: 100%;
-    overflow-y: scroll;
+    /* background-size: 100%; */
+    overflow-y: auto;
+  }
+
+  .lebih{
+    overflow: hidden;
   }
