--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@
     color: white;
     /* height: 770px; */
 
-    border: yellow solid 3px;
+    border: black solid 3px;
     background-image: url('https://forums.unrealengine.com/filedata/fetch?id=1155855') ;
     background-size: 100% 100%;
   }
@@ -106,7 +106,7 @@
     
     padding-top: 55px;
     /* height: 850px; */
-    border: yellow solid 3px;
+    border: black solid 3px;
     background-image: url(./news.jpg);
     background-size: 100%;
     overflow: auto;
@@ -125,9 +125,8 @@
     padding-top: 55px ;
     /* height: 670px; */
     border: black solid 3px;
-    /* background-color: rgb(67, 222, 250); */
     background-image: url(./paint1.jpg);
-    /* background-size: 100%; */
+    background-size: 100%;
     overflow-y: auto;
   }
 
