--- a/style.css
+++ b/style.css
@@ -30,42 +30,38 @@
     padding-right: 70px;
   }
   .gambar-sekilas{
-    /* display: grid; */
-    /* background-image: url(./film.png) ; */
-    /* background-position: center; */
-    /* padding-right: 100px; */
     text-align: center;
     align-items: center;
-    /* grid-template-columns: auto auto auto auto; */
     background-size: 380px 300px;
-    
-
   }
   .gambar1{
     background-image: url(./image-001.jpg);
-    /* background-color: hotpink; */
-    background-size: 100% ;
+    background-size: 100% 100%;
+    transform: scale(1);
+    transition: transform 1s;
+    
   }
 
   .gambar2{
     background-image: url(./image-002.jpg);
-    /* background-color: hotpink; */
-    background-size: 100% 100% ;
+    background-size: 100% 100%;
+    transition: transform 1s;
   }
   .gambar3{
     background-image: url(./image-003.jpg);
-    /* background-color: hotpink; */
-    background-size: 100% 100% ;
+    background-size: 100% 100%;
+    transition: transform 1s;
   }
 
   .gambar4{
     background-image: url(./image-004.jpg);
-    /* background-color: hotpink; */
-    background-size: 100% ;
+    background-size: 100% 100% ;
+    transition: transform 1s;
   }
 
   .gambar1:hover{
-    transform: scale(1.3);
+    transform :scale(1.3)
+ 
   }
   .gambar2:hover{
     transform: scale(1.3);
@@ -91,6 +87,7 @@
   }
   .text-color{
     color: white;
+    /* text-decoration:; */
   }
 
   #home-page {
@@ -108,8 +105,9 @@
     /* height: 850px; */
     border: black solid 3px;
     background-image: url(./news.jpg);
-    background-size: 100%;
+    background-size: 100% 100%;
     overflow: auto;
+    
   }
   
   #biodata {
@@ -130,11 +128,28 @@
     overflow-y: auto;
   }
 
-  .lebih{
-    overflow: hidden;
+  .last-text{
+    text-align: left;
+    grid-template-rows: 50% 50%
   }
 
   table{
     opacity: 80%;
-
   }
+  a.nav-link{
+    color: yellow;
+  }
+  /* a.nav-link:hover{
+    
+    background-color: yellow;
+  } */
+
+  #judul{
+    font-size: 50px;
+    color: white;
+    font-family: fantasy;
+    text-decoration: underline;
+    
+  }
+ 
+  
